# ai-code-review-env

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_results.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  environment.py  graders.py  init.py  models.py  tasks.py
server/: __init__.py  app.py
tests/: test_graders.py
