[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-review-env"
version = "1.0.0"
description = "OpenEnv environment for realistic AI code review tasks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Engineer" }]
dependencies = [
  "openenv-core>=0.2.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]
